examples/type_system/failing/119_fn_missing_parens.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn foo -> Int { 1 }
